# xinfo

./: AUTHORS  CMakeLists.txt  LICENSE  README.md  appveyor.yml
source/: CMakeLists.txt
source/codegeneration/: xinfo_api.h.in
source/examples/: CMakeLists.txt
source/examples/xinfo-testing/: CMakeLists.txt  main.cpp
source/tests/: CMakeLists.txt
source/xinfo/: CMakeLists.txt
source/xinfo/include/m4gfx/sis/: defines.h  info_provider.hpp  predef.hpp  types.h  x_info.hpp
source/xinfo/source/: cpuinfo.cpp  glewinfo.hpp  gpuinfo.cpp  gpuinfo.hpp  info_provider.cpp  summary_manager.cpp  x_info.cpp
